--- a/views/layouts/layouts.ejs
+++ b/views/layouts/layouts.ejs
@@ -6,6 +6,9 @@
     <title>DEMENTED</title>
 </head>
 <body>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/err.ejs') %>
+
     Layout working
     <%-body%>
 </body>
