--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,12 +15,12 @@
               <a class="nav-link" href="/authors/new">ADD  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Link</a>
+              <a class="nav-link" href="/books">Books</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
+            <li class="nav-item">
+              <a class="nav-link" href="/books/new">Add Books</a>
+            </li>
+            
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Action</a>
                 <a class="dropdown-item" href="#">Another action</a>
